Added config file for settings

--- a/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
+++ b/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Processing Notebook\n",
+    "===\n",
+    "\n",
+    "Prepare data for the analysis. The raw data is downloaded from the FAIR Universe HiggsML challenge repository, which \n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +20,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import mplhep as hep\n",
-    "\n",
+    "import yaml\n",
     "from utils import plot_kinematic_features\n",
     "\n",
     "import warnings\n",
@@ -29,17 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-05 13:00:56,659 - HiggsML.datasets     - INFO     - Handling as URL: https://zenodo.org/records/15131565/files/FAIR_Universe_HiggsML_data.zip\n",
-      "2025-06-05 13:00:56,660 - HiggsML.datasets     - INFO     - Current working directory: /data/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau\n",
-      "2025-06-05 13:00:56,720 - HiggsML.datasets     - INFO     - Total rows: 220099101\n",
-      "2025-06-05 13:00:56,721 - HiggsML.datasets     - INFO     - Test size: 66029730\n"
+      "2025-06-06 07:36:15,764 - HiggsML.datasets     - INFO     - Handling as URL: https://zenodo.org/records/15131565/files/FAIR_Universe_HiggsML_data.zip\n",
+      "2025-06-06 07:36:15,766 - HiggsML.datasets     - INFO     - Current working directory: /data/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau\n",
+      "2025-06-06 07:36:15,937 - HiggsML.datasets     - INFO     - Total rows: 220099101\n",
+      "2025-06-06 07:36:15,938 - HiggsML.datasets     - INFO     - Test size: 66029730\n"
      ]
     }
    ],
@@ -53,19 +63,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign an integer with each of the processes (same as the dictionary used to load)\n",
-    "labels_dict = {\"htautau\": 0,\n",
-    "              \"ztautau\":1,\n",
-    "              \"ttbar\":2}\n",
-    "\n",
-    "# exclude low stats diboson sample for now\n",
-    "# labels_dict = {\"htautau\": 0,\n",
-    "#               \"ztautau\":1,\n",
-    "#               \"ttbar\":2,\n",
-    "#               \"diboson\":3}\n",
-    "\n",
-    "\n",
-    "# np.save(f\"{saved_data}labels_dictionary.npy\", labels_dict)\n"
+    "with open(\"config.yml\", \"r\") as f:\n",
+    "    config = yaml.safe_load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'htautau': 0, 'ztautau': 1, 'ttbar': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the dictionary that assigns an integer with each of the processes\n",
+    "labels_dict = config[\"labels_dict\"]\n",
+    "print(labels_dict)"
    ]
   },
   {
