--- a/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
+++ b/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
@@ -52,11 +52,11 @@
      "text": [
       "/data/jaySandesara/NSBI_workflow_tutorial/src/nsbi_common_utils/plotting.py:10: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
       "  hep.set_style(\"ATLAS\")\n",
-      "2025-06-04 21:56:08.728737: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-06-06 07:31:28.078391: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1749074168.741782  482920 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1749074168.745662  482920 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-06-04 21:56:08.760595: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1749195088.091362     297 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1749195088.095249     297 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-06-06 07:31:28.109753: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -78,6 +78,7 @@
     "import mplhep as hep\n",
     "import matplotlib.pyplot as plt\n",
     "import pickle\n",
+    "import yaml\n",
     "\n",
     "from utils import preselection_using_score, calculate_preselection_observable\n",
     "\n",
@@ -88,6 +89,17 @@
     "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
     "\n",
     "hep.style.use(hep.style.ATLAS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4de8df61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"config.yml\", \"r\") as f:\n",
+    "    config = yaml.safe_load(f)"
    ]
   },
   {
@@ -103,10 +115,7 @@
     "saved_data = f'{path_prefix}cached_data/'\n",
     "\n",
     "# Path for saving/loading preselection NN model\n",
-    "path_to_saved_presel_model = f'{path_prefix}preselection_saved_NN/'\n",
-    "\n",
-    "# Load the nominal dataset saved from the pre-processing notebook\n",
-    "dataset_incl_nominal = pd.read_hdf(f\"{saved_data}df_nominal.h5\", key=\"dataset\", mode='r')"
+    "path_to_saved_presel_model = f'{path_prefix}preselection_saved_NN/'"
    ]
   },
   {
@@ -121,53 +130,38 @@
     "# If the preselection NN has already been trained and evaluated, load the numpy array of predictions\n",
     "USE_SAVED_PRESEL_PREDICTIONS=True\n",
     "\n",
+    "# Input features for training\n",
+    "columns = config[\"columns\"]\n",
+    "\n",
+    "# Subset of the features to standardize before training\n",
+    "columns_scaling = config[\"columns\"]\n",
+    "\n",
     "# Get the dictionary of labels to processes\n",
-    "labels_dict = np.load(f\"{saved_data}labels_dictionary.npy\", allow_pickle=True).item()\n",
+    "labels_dict = config[\"labels_dict\"]\n",
     "\n",
-    "# Features to use for training NNs\n",
-    "columns = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi']\n",
-    "columns_scaling = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi']\n",
+    "# Signal processes in the model\n",
+    "signal_processeses = config[\"signal_processes\"]\n",
     "\n",
-    "# columns = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi', 'PRI_jet_all_pt', 'PRI_n_jets', 'has_jets']\n",
-    "# columns_scaling = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi', 'PRI_jet_all_pt']\n",
-    "\n",
-    "# columns = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi', 'PRI_jet_all_pt', 'PRI_jet_leading_pt', 'PRI_jet_leading_eta', 'has_jets']\n",
-    "# columns_scaling = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi', 'PRI_jet_all_pt', 'PRI_jet_leading_pt', 'PRI_jet_leading_eta']\n",
+    "# Background processes in the model\n",
+    "background_processes = config[\"background_processes\"]\n",
     "\n",
     "\n",
-    "np.save(f\"{saved_data}columns.npy\", columns)\n",
-    "np.save(f\"{saved_data}columns_scaling.npy\", columns_scaling)\n",
+    "mix_model_hypotheses = config[\"mix_model_hypotheses\"]\n",
+    "ref_processes = config[\"ref_processes\"]\n",
     "\n",
-    "\n",
-    "signal_processes = [\"htautau\"]\n",
-    "background_processes = [\"ttbar\", \"ztautau\"]\n",
-    "# background_processes = [\"ttbar\", \"ztautau\", \"diboson\"]\n",
-    "\n",
-    "# mix_model_hypotheses = signal_processes + background_processes\n",
-    "mix_model_hypotheses = background_processes\n",
-    "ref_processes = signal_processes\n",
-    "\n",
-    "np.save(f\"{saved_data}mix_model_hypotheses.npy\", mix_model_hypotheses)\n",
-    "np.save(f\"{saved_data}ref_processes.npy\", ref_processes)\n",
-    "\n",
-    "pre_factor_preselection_score = {}\n",
-    "\n",
-    "pre_factor_preselection_score['htautau'] = 1.0\n",
-    "pre_factor_preselection_score['ttbar'] = 1.0\n",
-    "pre_factor_preselection_score['ztautau'] = 1.0\n",
-    "\n",
-    "np.save(f\"{saved_data}signal_processes.npy\", signal_processes)\n",
-    "np.save(f\"{saved_data}background_processes.npy\", background_processes)\n",
-    "np.save(f\"{saved_data}pre_factor_preselection.npy\", pre_factor_preselection_score)\n"
+    "# float factors multiplying the probabilities in the preselection score observable \n",
+    "pre_factor_preselection_score = config[\"pre_factor_preselection_score\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "1051f14a-0104-418b-9e43-6edcdcd07df2",
+   "execution_count": null,
+   "id": "a80627c5-a251-4a68-bb07-ce38f59f048b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the nominal dataset saved from the pre-processing notebook\n",
+    "dataset_incl_nominal = pd.read_hdf(f\"{saved_data}df_nominal.h5\", key=\"dataset\", mode='r')\n",
     "\n",
     "# Load the MC/data weights and training labels identifying different processes\n",
     "weights = dataset_incl_nominal.weights.to_numpy()\n",
@@ -358,6 +352,12 @@
     "preselection_cuts = {'upper': 2.2, 'lower': -0.5}\n",
     "np.save(f\"{saved_data}preselection_cuts.npy\", preselection_cuts)\n",
     "\n",
+    "config_data = {\n",
+    "    \"preselection_cuts\": preselection_cuts\n",
+    "}\n",
+    "\n",
+    "with open(\"config.yml\", \"w\") as f:\n",
+    "    yaml.dump(config_data, f, default_flow_style=False)\n",
     "\n",
     "for key in labels_dict:  \n",
     "    hep.histplot(hist_NN_output[key], bins = bins, \n",
