--- a/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
+++ b/FAIR_universe_Higgs_tautau/Data_Preprocessing.ipynb
@@ -8,13 +8,13 @@
     "Data Processing Notebook\n",
     "===\n",
     "\n",
-    "Prepare data for the analysis. The raw data is downloaded from the FAIR Universe HiggsML challenge repository, which \n",
+    "Prepare data for the analysis. The raw data is downloaded from the FAIR Universe HiggsML challenge repository. Use the HiggsML package to download and process the dataset, followed by selections and saving to local cache.\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,27 +31,22 @@
     "from HiggsML.systematics import systematics\n",
     "hep.style.use(hep.style.ATLAS)\n",
     "\n",
-    "path_prefix = '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/'\n",
-    "\n",
-    "import os\n",
-    "os.chdir(f\"{path_prefix}\")\n",
-    "\n",
     "from HiggsML.datasets import download_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-06-06 08:23:41,017 - HiggsML.datasets     - INFO     - Handling as URL: https://zenodo.org/records/15131565/files/FAIR_Universe_HiggsML_data.zip\n",
-      "2025-06-06 08:23:41,019 - HiggsML.datasets     - INFO     - Current working directory: /data/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau\n",
-      "2025-06-06 08:23:41,025 - HiggsML.datasets     - INFO     - Total rows: 220099101\n",
-      "2025-06-06 08:23:41,025 - HiggsML.datasets     - INFO     - Test size: 66029730\n"
+      "2025-06-06 09:10:17,014 - HiggsML.datasets     - INFO     - Handling as URL: https://zenodo.org/records/15131565/files/FAIR_Universe_HiggsML_data.zip\n",
+      "2025-06-06 09:10:17,016 - HiggsML.datasets     - INFO     - Current working directory: /data/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau\n",
+      "2025-06-06 09:10:17,023 - HiggsML.datasets     - INFO     - Total rows: 220099101\n",
+      "2025-06-06 09:10:17,023 - HiggsML.datasets     - INFO     - Test size: 66029730\n"
      ]
     }
    ],
@@ -61,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -83,6 +78,18 @@
     }
    ],
    "source": [
+    "# path prefix for saving cached data used between modules\n",
+    "path_prefix = config['path_prefix']\n",
+    "path_saved_data = config['path_saved_data']\n",
+    "\n",
+    "# Path for saving interemdiate objects, like NN predictions\n",
+    "saved_data = f'{path_prefix}{path_saved_data}'\n",
+    "\n",
+    "if not os.path.exists(saved_data):\n",
+    "    print(f\"Making new directory for caching data {saved_data}\")\n",
+    "    os.makedirs(saved_data)\n",
+    "\n",
+    "\n",
     "# Get the dictionary that assigns an integer with each of the processes\n",
     "labels_dict = config[\"labels_dict\"]\n",
     "print(labels_dict)"
@@ -227,16 +234,19 @@
     "        data_set = df_training, \n",
     "        dopostprocess=True, \n",
     "        **syst_args\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "del df_training\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "del df_training"
+    "Selections\n",
+    "-\n",
+    "\n",
+    "Preselect the dataset to remove phase space regions with low statistics"
    ]
   },
   {
@@ -257,6 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Select the subset of features to keep in the saved dataset - remove unnecessary data\n",
     "input_features = ['PRI_lep_pt', 'PRI_lep_eta', 'PRI_lep_phi', 'PRI_met', 'PRI_met_phi', 'PRI_had_pt', 'PRI_had_eta', 'PRI_had_phi', 'PRI_jet_all_pt', 'PRI_jet_leading_eta', 'PRI_n_jets', 'has_jets']\n",
     "columns_to_keep = input_features + ['weights', 'detailed_labels', 'type', 'train_labels']\n",
     "\n",
@@ -266,30 +277,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# path prefix for saving cached data used between modules\n",
-    "path_prefix = '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/'\n",
-    "\n",
-    "# Path for saving interemdiate objects, like NN predictions\n",
-    "saved_data = f'{path_prefix}cached_data/'\n",
-    "\n",
-    "\n",
-    "if not os.path.exists(saved_data):\n",
-    "    print(f\"Making new directory for caching data {saved_data}\")\n",
-    "    os.makedirs(saved_data)\n"
+    "# Save the datasets for training and inference\n",
+    "for sample in dataset_dict: \n",
+    "    dataset_dict[sample].to_hdf(f\"{saved_data}df_{sample}.h5\", key=\"dataset\", mode=\"w\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "for sample in dataset_dict: \n",
-    "    dataset_dict[sample].to_hdf(f\"{saved_data}df_{sample}.h5\", key=\"dataset\", mode=\"w\")"
+    "Visualize the data\n",
+    "-\n",
+    "\n",
+    "Check for low-stats phase space and effect from systematics before moving to the density ratio training."
    ]
   },
   {
