--- a/FAIR_universe_Higgs_tautau/Systematic_Uncertainty_Estimation.ipynb
+++ b/FAIR_universe_Higgs_tautau/Systematic_Uncertainty_Estimation.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "$$g_c(x|\\alpha) = \\frac{p_c(x|\\alpha)}{p_c(x)} = \\prod_m \\frac{p_c(x|\\alpha_m^{eval})}{p_c(x)}$$\n",
     "\n",
-    "where the second equality assumes that the effect of various sources of uncertainty in the model can be factorized. This is another density ratio estimation problem, but instead of training m $\\alpha-$parameterized NNs, we use a HistFactory-style interpolation generalized to a per-event formulation:\n",
+    "where the second equality assumes that **the effect of various sources of uncertainty in the model can be factorized**. This is another density ratio estimation problem, but instead of training m $\\alpha-$parameterized NNs, we use a HistFactory-style interpolation generalized to a per-event formulation:\n",
     "\n",
     "$$\\frac{p_c(x|\\alpha_m^{eval})}{p_c(x)} = \\begin{cases}\n",
     "    \\left(\\frac{p_c(x|\\alpha_m^+)}{p_c(x)}\\right)^{\\alpha_m^\\text{eval}}& \\alpha_m^\\text{eval}>1\\\\\n",
@@ -347,15 +347,11 @@
     "Density ratio training\n",
     "===\n",
     "\n",
-    "Now we train the NNs for $\\frac{p_c}{p_{ref}}(x)$ density ratios to build the full model. Our choice of reference hypothesis, motivated by the search-oriented mixture model described above, is: \n",
+    "Now we train the NNs to predict two ratios,\n",
     "\n",
-    "$$p_{ref}(x) = p_\\text{ttbar}(x) = \\frac{1}{\\nu_\\text{ttbar}} \\frac{d\\sigma_\\text{ttbar}}{dx} $$\n",
+    "$$\\frac{p_c(x|\\alpha_m^+)}{p_c(x)} \\, , \\frac{p_c(x|\\alpha_m^-)}{p_c(x)}$$\n",
     "\n",
-    "gives the POI $\\mu-$parameterized model:\n",
-    "\n",
-    "$$\\sum_c \\left[f_c(\\mu) \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)} \\right]= \\mu + \\frac{p_\\text{wjets}\\left(x\\right)}{p_\\text{ttbar}(x)} + \\frac{p_\\text{single top}\\left(x\\right)}{p_\\text{ttbar}(x)}$$\n",
-    "\n",
-    "The task of estimating the $\\mu-$parameterized density ratio is thus reduced to estimating two $\\mu-$independent density ratios $\\frac{p_\\text{single top}}{p_{t\\bar{t}}}(x)$ and $\\frac{p_\\text{wjets}}{p_{t\\bar{t}}}(x)$ mixed together with an analytical parameterization (hence the name mixture model)."
+    "for each nuisance parameter $\\alpha_m$, for each process $p_c$ that is affected by the corresponding nuisance parameter.\n"
    ]
   },
   {
@@ -2569,6 +2565,7 @@
     }
    ],
    "source": [
+    "# For systematic uncertainty variations, we use a calibration layer to regularize the small fluctuations in density ratio output\n",
     "doCalibration=True\n",
     "\n",
     "for process in labels_dict:\n",
@@ -2763,6 +2760,19 @@
     "num_bins_plotting=21\n",
     "\n",
     "NN_training_syst_process[\"htautau\"][\"TES\"][\"dn\"].make_reweighted_plots(variables_to_plot, yscale_type, num_bins_plotting)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29e027e6-5019-43eb-a1d2-8b9e2c21027c",
+   "metadata": {},
+   "source": [
+    "Save the model output\n",
+    "--\n",
+    "\n",
+    "Save the density ratios corresponding to each NP $\\alpha_m$ and process $p_c(x)$ as a set of `numpy` arrays for use in the `Parameter_Fitting_with_Systematics.ipynb` notebook.\n",
+    "\n",
+    "The trained models are also saved automatically by the training class for direct use in inference, or for evaluating on real data."
    ]
   },
   {
