--- a/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
+++ b/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
@@ -37,37 +37,25 @@
     "\n",
     "Let's set this up for the toy ttbar model we are using. Neglecting the nuisance parameter dependence for now, \n",
     "\n",
-    "$$\\sum_c \\left[f_c(\\mu) \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)}\\right] = \\mu \\cdot \\frac{p_{H \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)} + \\frac{p_{t\\bar{t}}\\left(x\\right)}{p_{ref}(x)} + \\frac{p_{H \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)}$$"
+    "$$\\sum_c \\left[f_c(\\mu) \\cdot \\frac{p_c\\left(x\\right)}{p_{ref}(x)}\\right] = \\mu \\cdot \\frac{p_{H \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)} + \\frac{p_{t\\bar{t}}\\left(x\\right)}{p_{ref}(x)} + \\frac{p_{Z \\to \\tau\\tau}\\left(x\\right)}{p_{ref}(x)}$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "0a769dae-97a2-44f9-bc81-e4c74ff7bedb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data/jaySandesara/NSBI_workflow_tutorial/src/nsbi_common_utils/plotting.py:10: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
-      "  hep.set_style(\"ATLAS\")\n",
-      "2025-06-06 07:31:28.078391: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1749195088.091362     297 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1749195088.095249     297 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-06-06 07:31:28.109753: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, sys, importlib\n",
     "sys.path.append('../')\n",
     "\n",
+    "# Load the package and modules for training and plotting\n",
     "import nsbi_common_utils\n",
     "from nsbi_common_utils import plotting, training\n",
     "from nsbi_common_utils.training import TrainEvaluate_NN, TrainEvaluatePreselNN\n",
+    "\n",
+    "\n",
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
@@ -93,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "4de8df61",
    "metadata": {},
    "outputs": [],
@@ -104,29 +92,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ec064a6c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_prefix = '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/'\n",
+    "# path prefix for saving cached data used between modules\n",
+    "path_prefix = config['path_prefix']\n",
+    "path_saved_data = config['path_saved_data']\n",
+    "path_preselection_NN_model = config['path_preselection_NN_model']\n",
     "\n",
     "# Path for saving interemdiate objects, like NN predictions\n",
-    "saved_data = f'{path_prefix}cached_data/'\n",
+    "saved_data = f'{path_prefix}{path_saved_data}'\n",
     "\n",
     "# Path for saving/loading preselection NN model\n",
-    "path_to_saved_presel_model = f'{path_prefix}preselection_saved_NN/'"
+    "path_to_saved_presel_model = f'{path_prefix}{path_preselection_NN_model}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "d61d461f-5f65-4e57-875e-1e85f44fe9b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# If the preselection NN has already been trained and saved, load from the saved model\n",
     "USE_SAVED_MODEL_PRESEL=True\n",
+    "\n",
     "# If the preselection NN has already been trained and evaluated, load the numpy array of predictions\n",
     "USE_SAVED_PRESEL_PREDICTIONS=True\n",
     "\n",
@@ -155,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a80627c5-a251-4a68-bb07-ce38f59f048b",
    "metadata": {},
    "outputs": [],
@@ -170,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "88ec0ba6-b840-4d7d-a5bb-d7fca2cb946f",
    "metadata": {},
    "outputs": [],
@@ -264,7 +256,7 @@
     "    presel_score = calculate_preselection_observable(pred_NN_incl, labels_dict, signal_processes, background_processes, pre_factor_dict = pre_factor_preselection_score)\n",
     "\n",
     "    np.save(f\"{saved_data}presel_score.npy\", presel_score)\n",
-    "    np.save(f\"{saved_data}pred_NN_incl.npy\", presel_score)\n",
+    "    np.save(f\"{saved_data}pred_NN_incl.npy\", pred_NN_incl)\n",
     "\n",
     "    "
    ]
