--- a/FAIR_universe_Higgs_tautau/Systematic_Uncertainty_Estimation.ipynb
+++ b/FAIR_universe_Higgs_tautau/Systematic_Uncertainty_Estimation.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "0a769dae-97a2-44f9-bc81-e4c74ff7bedb",
    "metadata": {},
    "outputs": [],
@@ -66,6 +66,7 @@
     "import mplhep as hep\n",
     "import matplotlib.pyplot as plt\n",
     "import pickle\n",
+    "import yaml\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -80,32 +81,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
+   "id": "c2145fe1-1dd4-4eed-bb16-cefcf113376d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"config.yml\", \"r\") as f:\n",
+    "    config = yaml.safe_load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "6aa6af2f-0686-4fbf-bca8-fce9a8bb1496",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# path prefix for general save directory\n",
+    "path_prefix = config['path_prefix']\n",
+    "\n",
+    "# sub-path for saving cached data used between modules\n",
+    "path_saved_data = config['path_saved_data']\n",
+    "saved_data = f'{path_prefix}{path_saved_data}'\n",
+    "\n",
+    "# Path for loading preselection NN model\n",
+    "path_preselection_NN_model = config['path_preselection_NN_model']\n",
+    "path_to_saved_presel_model = f'{path_prefix}{path_preselection_NN_model}'\n",
+    "\n",
+    "# Input features for training\n",
+    "columns = config[\"columns\"]\n",
+    "\n",
+    "# Subset of the features to standardize before training\n",
+    "columns_scaling = config[\"columns\"]\n",
+    "\n",
+    "# Get the dictionary of labels to processes\n",
+    "labels_dict = config[\"labels_dict\"]\n",
+    "\n",
+    "# Signal processes in the model\n",
+    "signal_processeses = config[\"signal_processes\"]\n",
+    "\n",
+    "# Background processes in the model\n",
+    "background_processes = config[\"background_processes\"]\n",
+    "\n",
+    "mix_model_hypotheses = config[\"mix_model_hypotheses\"]\n",
+    "ref_processes = config[\"ref_processes\"]\n",
+    "\n",
+    "# float factors multiplying the probabilities in the preselection score observable \n",
+    "pre_factor_preselection_score = config[\"pre_factor_preselection_score\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d37ab3ac-2064-412a-87d1-518bc9254279",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['TES']\n"
+      "{'TES': {'process': ['htautau', 'ttbar', 'ztautau'], 'directions': ['up', 'dn']}, 'JES': {'process': ['htautau', 'ttbar', 'ztautau'], 'directions': ['up', 'dn']}}\n"
      ]
     }
    ],
    "source": [
-    "# Save/load the datasets from pre-processed input\n",
-    "path_prefix = '/home/jaySandesara/NSBI_workflow_tutorial/FAIR_universe_Higgs_tautau/'\n",
-    "saved_data = f'{path_prefix}cached_data/'\n",
-    "\n",
-    "# Systematics and which samples are affected by which systematics\n",
-    "dict_systs = {'TES': {'process':['htautau', 'ttbar', 'ztautau'], 'directions':['up','dn']},\n",
-    "              'JES': {'process':['htautau', 'ttbar', 'ztautau'], 'directions':['up','dn']}}\n",
-    "\n",
-    "# Systematics and which samples are affected by which systematics\n",
-    "dict_systs = {'TES': {'process':['htautau', 'ttbar', 'ztautau'], 'directions':['up','dn']}}\n",
-    "\n",
-    "np.save(f\"{saved_data}dict_systs.npy\", dict_systs)\n",
-    "\n",
+    "dict_systs = config[\"dict_systs\"]\n",
+    "print(dict_systs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "126c45ac-5e21-42bf-a971-d5d3f6ab4850",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the datasets corresponding to systematic variations\n",
     "datasets_syst = {}\n",
     "\n",
     "for syst in dict_systs:\n",
@@ -124,24 +175,6 @@
     "\n",
     "list_syst = [key for key in dict_systs]\n",
     "print(list_syst)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "354e91c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the dictionary of labels to processes\n",
-    "labels_dict = np.load(f\"{saved_data}labels_dictionary.npy\", allow_pickle=True).item()\n",
-    "\n",
-    "signal_processes = np.load(f\"{saved_data}signal_processes.npy\")\n",
-    "background_processes = np.load(f\"{saved_data}background_processes.npy\")\n",
-    "pre_factor = np.load(f\"{saved_data}pre_factor_preselection.npy\", allow_pickle=True).item()\n",
-    "\n",
-    "columns = np.load(f\"{saved_data}columns.npy\")\n",
-    "columns_scaling = np.load(f\"{saved_data}columns_scaling.npy\")"
    ]
   },
   {
@@ -188,8 +221,6 @@
    "source": [
     "importlib.reload(sys.modules['nsbi_common_utils.training'])\n",
     "from nsbi_common_utils.training import TrainEvaluatePreselNN\n",
-    "\n",
-    "path_to_saved_presel_model = f'{path_prefix}preselection_saved_NN/'\n",
     "\n",
     "num_classes = len(labels_dict)\n",
     "\n",
