restructuring with config files, bug fix

--- a/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
+++ b/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
@@ -42,10 +42,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "0a769dae-97a2-44f9-bc81-e4c74ff7bedb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/jaySandesara/NSBI_workflow_tutorial/src/nsbi_common_utils/plotting.py:10: FutureWarning: ``set_style`` is deprecated: Naming convention is changing to match mpl. Use ``mplhep.style.use()``.\n",
+      "  hep.set_style(\"ATLAS\")\n",
+      "2025-06-06 16:01:21.239013: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1749225681.252357     152 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1749225681.256236     152 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-06-06 16:01:21.270592: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import os, sys, importlib\n",
     "sys.path.append('../')\n",
@@ -81,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "4de8df61",
    "metadata": {},
    "outputs": [],
@@ -136,10 +151,6 @@
     "\n",
     "# Background processes in the model\n",
     "background_processes = config[\"background_processes\"]\n",
-    "\n",
-    "\n",
-    "mix_model_hypotheses = config[\"mix_model_hypotheses\"]\n",
-    "ref_processes = config[\"ref_processes\"]\n",
     "\n",
     "# float factors multiplying the probabilities in the preselection score observable \n",
     "pre_factor_preselection_score = config[\"pre_factor_preselection_score\"]\n"
@@ -516,6 +527,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "bf0a4b5b-fa08-4c7c-a240-7353809b67a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['htautau']\n",
+      "['ttbar', 'ztautau']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Choose the reference hypothesis\n",
+    "ref_processes = config[\"ref_processes\"]\n",
+    "print(ref_processes)\n",
+    "\n",
+    "# Load the processes that make up the mixture model formula for density ratio estimation\n",
+    "mix_model_hypotheses = config[\"mix_model_hypotheses\"]\n",
+    "print(mix_model_hypotheses)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "id": "8966e691-14bb-4c04-8de3-880e5ccea5b6",
    "metadata": {},
@@ -640,6 +676,9 @@
    "source": [
     "# Define unique settings for each process type\n",
     "\n",
+    "doCalibration = True\n",
+    "num_bins_cal = 100\n",
+    "\n",
     "training_settings = {\n",
     "    'ttbar': {\n",
     "        'hidden_layers':        2,\n",
@@ -648,8 +687,8 @@
     "        'batch_size':           512,\n",
     "        'learning_rate':        0.1,\n",
     "        'scalerType':           'StandardScaler',\n",
-    "        'calibration':          True,\n",
-    "        'num_bins_cal':         100,\n",
+    "        'calibration':          doCalibration,\n",
+    "        'num_bins_cal':         num_bins_cal,\n",
     "        'callback':             True,\n",
     "        'callback_patience':    30,\n",
     "        'callback_factor':      0.01,\n",
@@ -663,8 +702,8 @@
     "        'batch_size':           512,\n",
     "        'learning_rate':        1.0,\n",
     "        'scalerType':           'StandardScaler',\n",
-    "        'calibration':          True,\n",
-    "        'num_bins_cal':         100,\n",
+    "        'calibration':          doCalibration,\n",
+    "        'num_bins_cal':         num_bins_cal,\n",
     "        'callback':             True,\n",
     "        'callback_patience':    30,\n",
     "        'callback_factor':      0.01,\n",
