--- a/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
+++ b/FAIR_universe_Higgs_tautau/Neural_Likelihood_Ratio_Estimation.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "4de8df61",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "ec064a6c",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "d61d461f-5f65-4e57-875e-1e85f44fe9b5",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
     "labels_dict = config[\"labels_dict\"]\n",
     "\n",
     "# Signal processes in the model\n",
-    "signal_processeses = config[\"signal_processes\"]\n",
+    "signal_processes = config[\"signal_processes\"]\n",
     "\n",
     "# Background processes in the model\n",
     "background_processes = config[\"background_processes\"]\n",
@@ -210,8 +210,53 @@
     "\n",
     "$$p_{ref}(x) = \\frac{1}{\\sum_S \\nu_S} \\sum_S \\frac{d\\sigma_S}{dx} = \\frac{1}{\\nu_{H \\to \\tau\\tau}} \\frac{d\\sigma_{H \\to \\tau\\tau}}{dx}$$\n",
     "\n",
-    "where the sum runs over all signal hypothesis in the model and the second equality is due to the sole signal hypothesis in our toy model, $pp \\to {t\\bar{t}}$. \n",
-    "\n",
+    "where the sum runs over all signal hypothesis in the model and the second equality is due to the sole signal hypothesis in our toy model, $pp \\to {t\\bar{t}}$. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e49f5052-70f9-4e96-9d22-87c09db8a4b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['htautau']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What are the signal processes in the user-provided model?\n",
+    "print(signal_processes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9d2a3392-3bd2-4a17-8dc2-e4866c342be6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['htautau']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The reference hypothesis is chosen as the sum of signal hypothesis\n",
+    "ref_processes = config[\"ref_processes\"]\n",
+    "print(ref_processes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb56173e-cc60-4e9d-ba7c-5a4b9b440299",
+   "metadata": {},
+   "source": [
     "**Selecting out regions with $p_{ref}\\sim 0$**\n",
     "\n",
     "A multi-class classification NN, with softmax output, is trained to output a score:\n",
@@ -527,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "bf0a4b5b-fa08-4c7c-a240-7353809b67a9",
    "metadata": {},
    "outputs": [
@@ -535,16 +580,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['htautau']\n",
       "['ttbar', 'ztautau']\n"
      ]
     }
    ],
    "source": [
-    "# Choose the reference hypothesis\n",
-    "ref_processes = config[\"ref_processes\"]\n",
-    "print(ref_processes)\n",
-    "\n",
     "# Load the processes that make up the mixture model formula for density ratio estimation\n",
     "mix_model_hypotheses = config[\"mix_model_hypotheses\"]\n",
     "print(mix_model_hypotheses)"
